// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileDecorator renders after text content 1`] = `
<DocumentFragment>
  <div
    class="d-flex align-items-center text-nowrap pl-1 test-file-decoration-container"
  >
    <div
      class="d-flex align-items-center fileDecoration"
    >
      <small
        class="text-monospace font-weight-normal test-file-decoration-text after"
        data-state="closed"
      >
        src decoration
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FileDecorator renders both after text content and meter 1`] = `
<DocumentFragment>
  <div
    class="d-flex align-items-center text-nowrap pl-1 test-file-decoration-container"
  >
    <div
      class="d-flex align-items-center fileDecoration"
    >
      <small
        class="text-monospace font-weight-normal test-file-decoration-text after"
        data-state="closed"
      >
        src decoration
      </small>
      <div
        data-state="closed"
      >
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
        />
        <meter
          aria-hidden="true"
          class="test-file-decoration-meter meter ml-2"
          high="60"
          low="50"
          max="100"
          min="0"
          optimum="70"
          value="40"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FileDecorator renders meter 1`] = `
<DocumentFragment>
  <div
    class="d-flex align-items-center text-nowrap pl-1 test-file-decoration-container"
  >
    <div
      class="d-flex align-items-center fileDecoration"
    >
      <div
        data-state="closed"
      >
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
        />
        <meter
          aria-hidden="true"
          class="test-file-decoration-meter meter"
          high="60"
          low="50"
          max="100"
          min="0"
          optimum="70"
          value="40"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FileDecorator respects active state 1`] = `
<DocumentFragment>
  <div
    class="d-flex align-items-center text-nowrap pl-1 test-file-decoration-container"
  >
    <div
      class="d-flex align-items-center fileDecoration"
    >
      <small
        class="text-monospace font-weight-normal test-file-decoration-text after afterActive"
        data-state="closed"
      >
        src decoration
      </small>
    </div>
  </div>
</DocumentFragment>
`;
